--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <script>Object.defineProperty(navigator, 'userAgent', { get: function () { return 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.1.2 Safari/605.1.15/Pd98YA08-42' }, configurable: true });</script>
-    <title>Dashboard | Eco-Tech</title>
+    <title>Patient Dashboard | Eco-Tech</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -14,14 +14,7 @@
 
     <link rel='stylesheet' type='text/css' href='css/dashboard.css'>
 
-
-
-
-
-
-
-
-    <!--Form-->
+    <!--Sign Up Form-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -122,7 +115,7 @@
         }
 
         .signup-form a {
-            color: #fff;
+            color: rgb(255, 101, 101);
             text-decoration: underline;
         }
 
@@ -155,7 +148,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Make Appointment</a>
+                    <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#appointmentModal">
+                        Make Appointment
+                    </button>
+                   <!-- <a class="nav-link" href="#">Make Appointment</a>-->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a>
@@ -178,7 +174,7 @@
                 <br>
                 coming up on <span>12/12/21</span> at <span>2:00pm</span></p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn More</a>
             </p>
         </div>
     </div>
@@ -189,8 +185,13 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">About You</h5>
-                        <p class="card-text">Medical Conditions: </p>
-                        <a href="#" class="btn btn-primary">See More</a>
+
+
+                        <!--INFO ENTERED FROM REGISTRATION GOES HERE-->
+
+
+                        <p class="card-text">Your Birthday is March 12, 2001</p>
+                        <a href="#" class="btn btn-sm btn-danger">Edit</a>
                     </div>
                 </div>
             </div>
@@ -198,8 +199,13 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Quick History</h5>
+
+                        <!--SHOWS LAST APPOINTMENT MADE-->
+
+
+
                         <p class="card-text">Your last appointment was </p>
-                        <a href="#" class="btn btn-primary">See More</a>
+                        <a href="#" class="btn btn-sm btn-secondary">See More</a>
                     </div>
                 </div>
             </div>
@@ -215,7 +221,9 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Doctors you have seen</h5>
-                <!--Just print the information from the form in this table to show PATIENT INFO-->
+
+                <!--PRINTS OUT DOCTORS VISITED-->
+
                 <p class="card-text address"></p>
                 <p class="card-text "></p>
 
@@ -231,8 +239,8 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Past Appointments (Appointment Table)</h5>
-                <!--Just show the appointment table info from APPOINTMENTS-->
 
+                <!--Just show the appointment table info from APPOINTMENTS-->
 
             </div>
         </div>
@@ -248,10 +256,10 @@
                 <h5 class="card-title">Make an appointment
                     <br>
                     <br>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-                        Launch demo modal
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#appointmentModal">
+                        Make Appointment
                     </button>
-                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                    <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog"
                         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
@@ -310,19 +318,6 @@
                                                 </div>
 
                                                 <div class="form-group">
-                                                    <input type="text" class="form-control" name="CellNumber"
-                                                        placeholder="Phone Number" required="required">
-
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="email" class="form-control" name="Email"
-                                                        placeholder="Email" required="required">
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="password" class="form-control" name="confirm_password"
-                                                        placeholder="Confirm Password" required="required">
-                                                </div>
-                                                <div class="form-group">
                                                     <label class="form-check-label"><input type="checkbox"
                                                             required="required"> I accept the <a href="#">Terms of
                                                             Use</a> &amp; <a href="#">Privacy Policy</a></label>
@@ -330,20 +325,18 @@
                                                 <div class="form-group">
 
                                                     <button type="submit"
-                                                        class="btn1 btn-primary btn-lg btn-block">Register Now</button>
-                                                    <br>
-                                                    <br>
-                                                    <br>
+                                                        class="btn1 btn-primary btn-lg btn-block">Book Appointment</button>
+                                                    <!--
                                                     <div class="text-center">Already have an account? <a
                                                             href="login.html"> Login</a></div>
-                                                </div>
+                                                </div>-->
                                                 </form>
                                     </div>
 
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -354,16 +347,6 @@
 
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
