--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="email" name="Email" placeholder="Email">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="Password" placeholder="Password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -59,7 +59,7 @@
 						</button>
 					</div>
 					<br>
-					<div class="text-center p-t-12">
+					<!--<div class="text-center p-t-12">
 						<span class="txt1">
 							Login as <br> 
 						</span>
@@ -67,7 +67,7 @@
 							<a href="login.html"> Doctor </a>
 							| <a href="login.html"> Administrator</a>
 						</a>
-					</div>
+					</div>-->
 
 					<div class="text-center p-t-136">
 						<a class="txt2" href="index.html">
