eigth commit included a README.txt file

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -449,7 +449,8 @@
                 Appointment
             </div>
             <div class="card-body">
-                <h5 class="card-title">Make an appointment</h5>
+                <h5 class="card-title">Appointments Made</h5>
+                <p></p>
                 
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#appointmentModal">
                         Make Appointment
